# aneurysm-detection

./: README.md  data-analysis.ipynb  pyproject.toml  visualize.ipynb
src/: classifier_train_and_evaluate.py  dataset_creation.py  dataset_split.py  generate_patches.py  generate_scan_predictions.py  patch_creation.py  simple_aggregator.py  train_aggregator.py  train_patch_classifier.py
src/utils/: CONSTANTS.py  aggregator_training_functions.py  classifier_training_functions.py  datasets.py  metrics.py  models.py  preprocess.py
